fixed about spacing

--- a/SCSS/about.scss
+++ b/SCSS/about.scss
@@ -76,7 +76,8 @@ h2 {
   }
 
   .break {
-    margin: 30px;
+    grid-column: 1 / 7;
+    margin: 10px;
   }
 }
 @media only screen and (min-width: 2000px) {
